# todo-maud-htmx

./: .env  .env.example  .gitignore  Cargo.toml  README.md  tailwind.config.js
db/: todo.db  todo.sqlite3  todo.sqlite3-shm  todo.sqlite3-wal
db/migrations/: 20230824190431_init.down.sql  20230824190431_init.up.sql
src/: db.rs  error.rs  handlers.rs  main.rs  repository.rs  utils.rs
src/pages/: item.rs  mod.rs
src/static/css/: main.css
src/views/: add_todo.rs  base.rs  clear.rs  delete_done.rs  edit_todo.rs  hello.rs  index.rs  mod.rs  todos.rs
